# ai-interview-assist

./: .env.example  .gitignore  LICENSE  README.md  additional experience and talking points.txt  diarize_server.py  requirements_diarize.txt  run_tests.ps1  start.bat  start_whisper.bat  t - build commands.txt  t - build suggestions.txt
backend/: .env.example  Cargo.toml  start.ps1  whisper-config.yaml
backend/crates/common/: Cargo.toml
backend/crates/common/src/: circuit_breaker.rs  config.rs  lib.rs  messages.rs  providers.rs  rate_limiter.rs
backend/crates/context/: Cargo.toml
backend/crates/context/src/: ai_helper.rs  builder.rs  crawler.rs  lib.rs  linkedin.rs  pdf.rs
backend/crates/sentiment/: Cargo.toml
backend/crates/sentiment/src/: claude_vision.rs  gemini_vision.rs  lib.rs  ollama_vision.rs
backend/crates/server/: Cargo.toml
backend/crates/server/src/: http_handler.rs  main.rs  review.rs  review_handler.rs  state.rs  tts_handler.rs  ws_handler.rs
backend/crates/server/tests/: api_integration.rs
backend/crates/suggestion/: Cargo.toml
backend/crates/suggestion/src/: bonsai_llm.rs  cerebras_llm.rs  claude_cli_llm.rs  claude_llm.rs  deepseek_llm.rs  detector.rs  gemini_llm.rs  gemma_llm.rs  groq_llm.rs  lib.rs  mistral_llm.rs  ollama_llm.rs  openrouter_llm.rs  prompt.rs  qwen_llm.rs
backend/crates/transcription/: Cargo.toml
backend/crates/transcription/src/: buffer.rs  deepgram.rs  diarize.rs  gemini.rs  groq.rs  lib.rs  vad.rs
backend/static/: index.html
backend/static/assets/: index-0_e1Y25r.js  index-1KoZ-wB6.css  index-2_bMPUbh.css  index-44wSkDbq.js  index-7PPF8ypG.css  index-7jo7TOcD.css  index-8mqe9Zoc.js  index-8zR6KQQW.js  index-AADzesVs.js  index-B-I6JelH.js  index-B3bUDI_K.css  index-B3liV8mV.css  index-B4T9Ct68.js  index-B5uMpEv-.js  index-B7JnHj2G.js  index-B8fFr0Ch.js  index-B9p1HUAO.js  index-B9xKR7Uc.js  index-BAtTXxJu.css  index-BAxe-pW_.js  index-BDMRsWmE.js  index-BKddiPiq.css  index-BLjLtY59.css  index-BNlHd4oe.js  index-BR6A6foH.js  index-BRaAVZup.css  index-BTdvuJbl.js  index-BYU_nmIS.js  index-BZ2r98p_.css  index-BcZJ8sx6.css  index-BiOFBWDM.js  index-BitLmIHl.css  index-Bjm4N1H_.css  index-Bjn5txmL.css  index-BlXkA8gb.js  index-BnkY4uOu.js  index-BpLgq_lE.js  index-BrsMrtzV.css  index-BshZOdNV.css  index-Bt33Y_5V.js  (+111 more)
frontend/: index.html  package-lock.json  package.json  test-app.mjs  test-controls.mjs  tsconfig.json  vite.config.ts
frontend/public/: pcm-processor.js
frontend/src/: app.svelte  main.ts
frontend/src/components/: AudioMeter.svelte  BodyLanguagePanel.svelte  CaptureButton.svelte  CompanyBriefPanel.svelte  DebriefModal.svelte  DraggablePanel.svelte  EnergyCoachPanel.svelte  InterviewHistoryPanel.svelte  InterviewerProfilePanel.svelte  KeywordTrackerPanel.svelte  NextQuestionPanel.svelte  PanelHeader.svelte  PastInterviewsPanel.svelte  PracticePanel.svelte  PracticeQuestionsBar.svelte  PreInterviewChecklist.svelte  ProviderOrderPanel.svelte  QuestionsHistoryPanel.svelte  RateLimitPanel.svelte  ReviewPanel.svelte  ReviewUpload.svelte  SalaryCoachPanel.svelte  SentimentBar.svelte  SessionDetailModal.svelte  SessionDetailView.svelte  SetupForm.svelte  StatsBar.svelte  StoryBankPanel.svelte  SuggestionPanel.svelte  TestQuestionBar.svelte  TranscriptPanel.svelte  WhisperOverlay.svelte
frontend/src/lib/: api.ts  audioTone.ts  capture.ts  confidence.ts  dragLayout.ts  emotions.ts  faceDetection.ts  filler.ts  interviewHistory.ts  keywordTracker.ts  paceCoach.ts  parseSuggestion.ts  personalityTracker.ts  practiceRecorder.ts  questionTagger.ts  redFlagDetector.ts  salaryDetector.ts  storageKeys.ts  storyBank.ts  tooltip.ts  ttsClient.ts  types.ts  utils.ts  websocket.ts
piper/: download_voices.sh
