[workspace]
members = [
    "crates/common",
    "crates/server",
    "crates/transcription",
    "crates/sentiment",
    "crates/suggestion",
    "crates/context",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors", "fs"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
base64 = "0.22"
hound = "3.5"
scraper = "0.22"
lopdf = "0.34"
url = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
bytes = "1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
zip = "0.6"
