[package]
name = "context"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
lopdf = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
