[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
transcription = { path = "../transcription" }
sentiment = { path = "../sentiment" }
suggestion = { path = "../suggestion" }
context = { path = "../context" }

tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
