[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
transcription = { path = "../transcription" }
sentiment = { path = "../sentiment" }
suggestion = { path = "../suggestion" }
context = { path = "../context" }

tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
time = { version = "0.3", features = ["macros"] }
bytes = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
