[package]
name = "transcription"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
hound = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
